// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stegvisning - Start > rendrer slik den skal med fornavn, med riktig heading, bilde, tekst og knapper 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <div
      class="_wrapper_09901f"
    >
      <img
        alt=""
        class="_image_09901f"
        src="/pensjon/kalkulator/src/assets/frida.svg"
      />
      <div
        class="_wrapperText_09901f"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          stegvisning.start.title Ola!
        </h2>
        <p
          class="navds-body-long navds-body-long--large"
        >
          stegvisning.start.ingress
        </p>
        <button
          class="_button_09901f navds-button navds-button--primary navds-button--medium"
          type="submit"
        >
          <span
            class="navds-label"
          >
            stegvisning.start.start
          </span>
        </button>
        <button
          class="navds-button navds-button--tertiary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Start > rendrer slik den skal uten fornavn, med riktig heading, bilde, tekst og knapper 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <div
      class="_wrapper_09901f"
    >
      <img
        alt=""
        class="_image_09901f"
        src="/pensjon/kalkulator/src/assets/frida.svg"
      />
      <div
        class="_wrapperText_09901f"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          stegvisning.start.title!
        </h2>
        <p
          class="navds-body-long navds-body-long--large"
        >
          stegvisning.start.ingress
        </p>
        <button
          class="_button_09901f navds-button navds-button--primary navds-button--medium"
          type="submit"
        >
          <span
            class="navds-label"
          >
            stegvisning.start.start
          </span>
        </button>
        <button
          class="navds-button navds-button--tertiary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
